--- a/main.css
+++ b/main.css
@@ -1,1 +1,43 @@
+body{
+  font-family: 'Roboto', sans-serif;
+}
+
+.solution {
+  color: hotpink;
+  border: 1px solid orange;
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 100;
+  padding-top: 10px;
+}
+.calc-btn {
+  color: hotpink;
+  border: 1px solid orange;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  font-size: 25px;
+  font-weight: 100;
+  padding-top: 10px;
+}
+
+.calc-btn:hover {
+  background-color: bisque;
+}
+
+.row {
+  display: table; 
+  width: 200px;
+table-layout: fixed;
+}
+.column {
+  display: table-cell
+}
+
+#calc-parent {
+  display: flex;
+  flex-flow: row wrap;
+}
 
