--- a/main.css
+++ b/main.css
@@ -1,43 +1,41 @@
-body{
-  font-family: 'Roboto', sans-serif;
+h1{
+ font-family: 'Inconsolata', monospace;
+ color: orange;
 }
 
-.solution {
-  color: hotpink;
-  border: 1px solid orange;
-  width: 150px;
-  height: 50px;
-  text-align: center;
-  font-size: 25px;
-  font-weight: 100;
-  padding-top: 10px;
-}
-.calc-btn {
-  color: hotpink;
-  border: 1px solid orange;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  font-size: 25px;
-  font-weight: 100;
-  padding-top: 10px;
-}
-
-.calc-btn:hover {
-  background-color: bisque;
-}
-
-.row {
-  display: table; 
-  width: 200px;
-table-layout: fixed;
-}
-.column {
-  display: table-cell
-}
-
-#calc-parent {
-  display: flex;
+.bigBox {
+  display:flex;
   flex-flow: row wrap;
+  border: 8px solid fuchsia;
+  width: 450px;
+  height: 560px;
+  padding: 2px;
+  margin: 0 auto;
+  justify-content: space-around;
+  background-color:blanchedalmond;
 }
 
+.display{
+  background-color:white;
+  border: 5px solid orange;
+  border-radius: 10%%;
+  width:325px;
+  height: 100px;
+}
+.btn{
+  background-color: mediumturquoise;
+  width:100px;
+  height: 100px;
+  border: 3px solid orange;
+  border-radius: 50%;
+  line-height:100px;
+  text-align: center;
+  font-size: 36px;
+  font-family: monospace;
+  color: white;
+  
+}
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
+</style>
